--- a/estilos/style.css
+++ b/estilos/style.css
@@ -7,6 +7,10 @@ body {
     background-color: rgb(198, 138, 253);
 }
 
+img.lado{
+    float: right
+}
+
 main{
     background-color: white;
     width: 500px;
